syntax = "proto3";
package sessions;

message Session {
  string ID = 1;
  string Tenant = 2;
  uint64 Peer = 3;
  bytes WillTopic = 4;
  int32 WillQoS = 5;
  bytes WillPayload = 6;
  bool WillRetain = 7;
}
